--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "homebridge": ">=0.3.0"
   },
   "dependencies": {
-    "request": "2.49.x",
-    "node-persist" : "2.0.x"
+    "node-persist": "2.0.x",
+    "request": "^2.88.0"
   },
   "homepage": "https://github.com/benzman81/homebridge-http-webhooks#readme",
   "author": "benzman81"
